--- a/src/wpzoom-blocks/recipe-card/style.scss
+++ b/src/wpzoom-blocks/recipe-card/style.scss
@@ -341,9 +341,9 @@
     	float: none;
     }
     ul.wpzoom-rating-stars {
-    	list-style: none;
-    	margin: 0;
-    	padding: 0;
+    	list-style: none !important;
+    	margin: 0 !important;
+    	padding: 0 !important;
     	display: inline-block;
 
     	> li {
@@ -353,6 +353,7 @@
 	    	padding-right: 4px;
 	    	cursor: pointer;
 	    	color: inherit;
+            font-family: "Font Awesome 5 Free";
 
 			&:last-child {
 				padding-right: 0;
