[WIP] Moved skins on folder itself, Delegate components to files

--- a/src/wpzoom-blocks/recipe-card/style.scss
+++ b/src/wpzoom-blocks/recipe-card/style.scss
@@ -487,7 +487,7 @@
 }
 
 @import "./skins/snippets";
-@import "./skins/default";
-@import "./skins/newdesign";
-@import "./skins/simple";
+@import "./skins/default/styles";
+@import "./skins/new-design/styles";
+@import "./skins/simple/styles";
 @import "./magnific-popup";
