--- a/src/wpzoom-blocks/recipe-card/style.scss
+++ b/src/wpzoom-blocks/recipe-card/style.scss
@@ -197,7 +197,7 @@
         }
 
         .direction-step-gallery {
-            margin: $grid-size 0;
+            margin: $grid-unit 0;
             position: relative;
 
             .direction-step-gallery-grid {
@@ -210,7 +210,7 @@
 
                 .direction-step-gallery-item {
                     margin: 0;
-                    margin-bottom: $grid-size;
+                    margin-bottom: $grid-unit;
                     list-style-type: none;
                     position: relative;
                     box-sizing: border-box;
@@ -267,7 +267,7 @@
             }
 
             .direction-step-gallery-item {
-                width: calc((100% - #{ $grid-size }) / 2);
+                width: calc(50% - #{ $grid-unit-20 });
             }
 
             &.columns-1 .direction-step-gallery-item {
@@ -277,14 +277,7 @@
 
             @for $i from 2 through 4 {
                 &.columns-#{ $i } .direction-step-gallery-item {
-                    width: calc((100% - #{ $grid-size } * #{ $i - 1 }) / #{ $i });
-
-                    // Rules inside this query are only run by Microsoft Edge.
-                    // Edge miscalculates `calc`, so we have to add some buffer.
-                    // See also https://developer.microsoft.com/en-us/microsoft-edge/platform/issues/15637241/
-                    @supports (-ms-ime-align:auto) {
-                        width: calc((100% - #{ $grid-size } * #{ $i - 1 }) / #{ $i } - 1px);
-                    }
+                    width: calc(#{ 100% / $i } - #{ $grid-unit * ( $i - 1 ) / $i });
                 }
             }
 
