[WIP] 🆕 New design: Accent Color Header
Added color palettes to use in the Block Settings
Added variables for Fonts and Border radius
Fixed multiple calls of getBlockStyle to get active style

--- a/src/common.scss
+++ b/src/common.scss
@@ -12,7 +12,22 @@
 @import "~@wordpress/base-styles/animations";
 @import "~@wordpress/base-styles/z-index";
 
-// Typography
+/**
+ * Fonts & basic variables.
+ */
 $google-font-family: "Roboto Condensed", sans-serif;
+$ultra-small-font-size: 12px;
+$small-font-size: 14px;
+$main-font-size: 16px;
+$ultra-font-size: 18px;
+$big-font-size: 24px;
+$ultra-big-font-size: 32px;
+
+/**
+ * Border radius.
+ */
+$radius-round-rectangle-x1: 10px;
+$radius-round-rectangle-x2: 20px;
+$radius-round-rectangle-x4: 40px;
 
 @import './__mixins';
