--- a/src/wpzoom-blocks/recipe-card/skins/accent-color-header/style.scss
+++ b/src/wpzoom-blocks/recipe-card/skins/accent-color-header/style.scss
@@ -4,6 +4,7 @@
             position: relative;
             text-align: center;
             padding: $grid-unit-40;
+            margin-bottom: $grid-unit-20;
             .recipe-card-image-placeholder,
             .recipe-card-image-preview {
                 width: 200px;
