--- a/src/wpzoom-blocks/recipe-card/style.scss
+++ b/src/wpzoom-blocks/recipe-card/style.scss
@@ -180,6 +180,9 @@
 	.recipe-card-directions + .footer-copyright {
         margin-top: 30px;
     }
+    [class*="recipe-card-cta-"] + .footer-copyright {
+        margin-top: 30px;
+    }
 
     .recipe-card-directions .directions-list .direction-step-group {
     	counter-reset: count;
