--- a/src/wpzoom-blocks/recipe-card/style.scss
+++ b/src/wpzoom-blocks/recipe-card/style.scss
@@ -56,91 +56,93 @@
 	.recipe-card-details {
 		margin-bottom: 15px;
 		clear: both;
-		.detail-item {
-			> p:not(.detail-item-label):not(.detail-item-value):not(.detail-item-unit) {
-				display: none;
-			}
-			.detail-item-label {
-				margin-bottom: 5px;
-			}
-			.detail-item-unit {
-				margin-bottom: 0;
-			}
-            .detail-item-adjustable-servings {
-                width: 55px;
-                height: 30px;
-                line-height: 1.65;
-                font-size: 12px;
-                float: left;
-                display: block;
-                padding: 0 20px 0 8px;
-                margin: 0;
-                border: 1px solid #eee;
-                border-radius: 0;
-                background-color: #fff;
-            }
-            > p.detail-item-value {
-                &.only-print-visible {
-                    display: none;
-                }
-            }
-            .adjustable-quantity {
-                position: relative;
-                vertical-align: middle;
-
-                + .detail-item-unit {
-                    vertical-align: middle;
-                }
-                + .only-print-visible + .detail-item-unit {
-                    vertical-align: middle;
-                }
-                input[type=number]::-webkit-inner-spin-button,
-                input[type=number]::-webkit-outer-spin-button {
-                    -webkit-appearance: none;
-                    margin: 0;
-                }
-                input[type=number] {
-                    -moz-appearance: textfield;
-                }
-                input:focus {
-                    outline: 0;
-                }
-                .adjustable-quantity-nav {
-                    float: left;
-                    position: relative;
+        .details-items {
+    		.detail-item {
+    			> p:not(.detail-item-label):not(.detail-item-value):not(.detail-item-unit) {
+    				display: none;
+    			}
+    			.detail-item-label {
+    				margin-bottom: 5px;
+    			}
+    			.detail-item-unit {
+    				margin-bottom: 0;
+    			}
+                .detail-item-adjustable-servings {
+                    width: 55px;
                     height: 30px;
+                    line-height: 1.65;
+                    font-size: 12px;
+                    float: left;
+                    display: block;
+                    padding: 0 20px 0 8px;
+                    margin: 0;
+                    border: 1px solid #eee;
+                    border-radius: 0;
+                    background-color: #fff;
                 }
-                .adjustable-quantity-button {
+                > p.detail-item-value {
+                    &.only-print-visible {
+                        display: none;
+                    }
+                }
+                .adjustable-quantity {
                     position: relative;
-                    cursor: pointer;
-                    border-left: 1px solid #eee;
-                    width: 20px;
-                    text-align: center;
-                    color: #333;
-                    font-size: 14px;
-                    font-weight: bold;
-                    font-family: "Trebuchet MS", Helvetica, sans-serif !important;
-                    line-height: 1;
-                    transform: translateX(-100%);
-                    user-select: none;
+                    vertical-align: middle;
 
-                    &:hover {
-                        background-color: #eee;
+                    + .detail-item-unit {
+                        vertical-align: middle;
                     }
-                    &.adjustable-quantity-up {
-                        position: absolute;
-                        height: 50%;
-                        top: 0;
-                        border-bottom: 1px solid #eee;
+                    + .only-print-visible + .detail-item-unit {
+                        vertical-align: middle;
                     }
-                    &.adjustable-quantity-down {
-                        position: absolute;
-                        bottom: 0;
-                        height: 50%;
+                    input[type=number]::-webkit-inner-spin-button,
+                    input[type=number]::-webkit-outer-spin-button {
+                        -webkit-appearance: none;
+                        margin: 0;
+                    }
+                    input[type=number] {
+                        -moz-appearance: textfield;
+                    }
+                    input:focus {
+                        outline: 0;
+                    }
+                    .adjustable-quantity-nav {
+                        float: left;
+                        position: relative;
+                        height: 30px;
+                    }
+                    .adjustable-quantity-button {
+                        position: relative;
+                        cursor: pointer;
+                        border-left: 1px solid #eee;
+                        width: 20px;
+                        text-align: center;
+                        color: #333;
+                        font-size: 14px;
+                        font-weight: bold;
+                        font-family: "Trebuchet MS", Helvetica, sans-serif !important;
+                        line-height: 1;
+                        transform: translateX(-100%);
+                        user-select: none;
+
+                        &:hover {
+                            background-color: #eee;
+                        }
+                        &.adjustable-quantity-up {
+                            position: absolute;
+                            height: 50%;
+                            top: 0;
+                            border-bottom: 1px solid #eee;
+                        }
+                        &.adjustable-quantity-down {
+                            position: absolute;
+                            bottom: 0;
+                            height: 50%;
+                        }
                     }
                 }
-            }
-		}
+    		}
+        }
 	}
 	.recipe-card-ingredients {
 		.ingredients-list {
